@@ -2013,9 +2013,255 @@ public class GCTest {
 
 ### 8.10 堆是分配对象的唯一选择吗
 
-🔖🔖p82 // TODO
+在《深入理解Java虚拟机》中关于Java堆内存有这样一段描述：
+
+随着JIT编译期的发展与==逃逸分析技术==逐渐成熟，==栈上分配、标量替换优化技术==将会导致一些微妙的变化，所有的对象都分配到堆上也渐渐变得不那么 “绝对”了。
+
+在Java虚拟机中，对象是在Java堆中分配内存的，这是一个普遍的常识。但是，有一种特殊情况，那就是如果经过==逃逸分析(Escape Analysis)== 后发现，**一个对象并没有逃逸出方法的话，那么就可能被优化成栈上分配**。这样就无需在堆上分配内存，也无须进行垃圾回收了。这也是最常见的**堆外存储技术**。
+
+此外，前面提到的基于openJDK深度定制的**TaoBaoVM**，其中创新的**GCIH** (GC invisible heap）技术实现**off-heap**，将生命周期较长的Java对象从heap中移至heap外，并且GC不能管理GCIH内部的Java对象，以此达到降低GC的回收频率和提升GC的回收效率的目的。
+
+#### 逃逸分析概述
+
+- ﻿如何将堆上的对象分配到栈，需要使用逃逸分析手段。
+
+- ﻿这是一种可以有效减少Java 程序中同步负载和内存堆分配压力的跨函数全局数据流分析算法。
+
+- ﻿通过逃逸分析，Java Hotspot编译器能够分析出一个新的对象的引用的使用范围从而决定是否要将这个对象分配到堆上。
+
+- ﻿逃逸分析的基本行为就是分析对象动态作用域：
+
+  当一个对象在方法中被定义后，对象只在方法内部使用，则认为没有发生逃逸。
+
+  当一个对象在方法中被定义后，它被外部方法所引用，则认为发生逃逸。例如作为调用参数传递到其他地方中。
+
+```java
+public void my_method() {
+  V v= new V();
+  // ...
+  v = null;
+}
+```
+
+没有发生逃逸的对象，则可以分配到栈上，随着方法执行的结束，栈空间就被移除。
 
 
+
+```java
+public static StringBuffer createStringBuffer(String s1, String s2) {
+  StringBuffer sb = new StringBuffer();
+  sb.append(s1);
+  sb.append(s2);
+  return sb;
+}
+```
+
+上述代码如果想要`StringBuffer sb`不逃出方法，可以写成：
+
+```java
+public static String createStringBuffer(String s1, String s2) {
+  StringBuffer sb = new StringBuffer();
+  sb.append(s1);
+  sb.append(s2);
+  return sb.toString();
+}
+```
+
+
+
+```java
+/**
+ * 逃逸分析
+ * 如果快速判断是否发生了逃逸？  就看new的对象实体是否在方法外被调用。
+ * @author andyron
+ **/
+public class EscapeAnalysis {
+    public EscapeAnalysis obj;
+
+    /**
+     * 方法返回EscapeAnalysis，发生逃逸
+     */
+    public EscapeAnalysis getInstance() {
+        return obj == null ? new EscapeAnalysis() : obj;
+    }
+    /**
+     * 为成员属性赋值，发生逃逸
+     */
+    public void setObj() {
+        this.obj = new EscapeAnalysis();
+    }
+    // 思考：如果当前的obj引用声明为static呢？  仍然会发生逃逸
+
+    /**
+     * 对象的作用域仅在当前方法中有效，没有发生逃逸
+     */
+    public void useEscapeAnalysis() {
+        EscapeAnalysis e = new EscapeAnalysis();
+    }
+    /**
+     * 引用成员变量的值，发生逃逸
+     */
+    public void useEscapeAnalysis2() {
+        EscapeAnalysis e = getInstance();
+    }
+}
+```
+
+
+
+**参数设置：**
+
+- ﻿在JDK 6u23版本之后，Hotspot中默认就己经开启了逃逸分析。
+
+- ﻿如果使用的是较早的版本，开发人员则可以通过：
+
+  选项`-XX: +DoEscapeAnalysis`显式开启逃逸分析
+
+  通过选项 `-XX：+PrintEscapeAnalysiso`查看逃逸分析的筛选结果。
+
+
+
+**结论**：开发中能使用局部变量的，就不要使用在方法外定义。
+
+#### 逃逸分析：代码优化
+
+使用逃逸分析，编译器可以对代码做如下优化：
+
+一、==栈上分配==。将堆分配转化为栈分配。如果一个对象在子程序中被分配，要使指向该对象的指针永远不会逃逸，对象可能是栈分配的候选，而不是堆分配。
+
+二、==同步省略==。如果一个对象被发现只能从一个线程被访问到，那么对于这个对象的操作可以不考虑同步。
+
+三、==分离对象或标量替换==。有的对象可能不需要作为一个连续的内存结构存在也可以被访问到，那么对象的部分（或全部）可以不存储在内存，而是存储在CPU寄存器中。
+
+##### 代码优化之栈上分配
+
+- JIT编译器在编译期间根据逃逸分桥的结果，发现如果一一个对象并没有逃逸出方法的话，就可能被优化成栈上分配。分配完成后，继续在调用栈内执行，最后线程结束，栈空间被回收，局部变量对象也被回收。这样就无须进行垃圾回收了。
+
+- 常见的栈上分配的场景
+
+  在逃逸分析中，已经说明了。分别是给成员变量赋值、方法返回值、实例引用传递。
+
+##### 代码优化之同步省路（消除〕
+
+- 线程同步的代价是相当高的，同步的后果是降低并发性和性能。
+- 在动态编译同步块的时候，JIT编译器可以借助逃逸分析来==判断同步块所使用的锁对象是否只能够被一个线程访问而没有被发布到其他线程==。如果没有，那么JIT编译器在编译这个同步块的时候就会取消对这部分代码的同步。这样就能大大提高并发性和性能。这个取消同步的过程就叫**同步省略**，也叫**锁消除**。
+
+如以下代码：🔖
+
+```java
+public void f() {
+  Object hollis = new Object();
+  synchronized (hollis) {
+    System.out.println(hollis);
+  }
+}
+```
+
+代码中对hollis这个对象进行加锁，但是hollis对象的生命周期只在f()方法中，并不会被其他线程所访问到，所以在JIT编译阶段就会被优化掉。优化成：(注意在字节码文件【前端编译器】中还是存在锁)
+
+```java
+public void f() {
+  Object hollis = new Object();
+  System.out.println (hollis);
+}
+```
+
+##### 代码优化之标量替換
+
+==标量(Scalar）==是指一个无法再分解成更小的数据的数据。Java中的原始数据类型就是标量。
+
+相对的，那些还可以分解的数据叫做==聚合量(Aggregate）==，Java中的对象就是聚合量，因为他可以分解成其他聚合量和标量。
+
+在JIT阶段，如果经过逃逸分析，发现一个对象不会被外界访问的话，那么经过JIT优化，就会把这个对象拆解成若干个其中包含的若干个成员变量来代替。这个过程就是==标量替换==。
+
+```java
+public static void main (string [J args) {
+	alloc () ;
+}
+private static void alloc() {}
+  Point point = new Point (1,2);
+  System.out.printIn ("point.×=" + point.x+ "; point.y=" + point.y);
+}
+                                 
+class Point {
+	private int x;
+  private int y;
+}
+```
+
+以上代码，经过标量替换后，就会变成：
+
+```java
+private static void alloc0 {
+  int x = 1;
+  int y = 2;
+  System.out.printin("point.x=" + x + "; point.y=" + y);
+}
+```
+
+可以看到，Point这个聚合量经过逃逸分析后，发现他并没有逃逸，就被替换成两个聚合量了。那么标量替换有什么好处呢？就是可以大大减少堆内存的占用。因为一旦不需要创建对象了，那么就不再需要分配堆内存了。
+
+标量替换为栈上分配提供了很好的基础。
+
+
+
+**标量替换换参数没置**：
+
+参数`-XX+EliminateAllocations`： 开启了标量替换(默认打开)，允许将对象打散分配在栈上。
+
+```java
+/**
+ * 标量替换测试
+ * -Xms100m -Xmx100m -XX:+DoEscapeAnalysis -XX:+PrintGC -XX:-EliminateAllocations
+ * @author andyron
+ **/
+public class ScalarReplace {
+    public static class User {
+        public int id;
+        public String name;
+    }
+
+    public static void alloc() {
+        User u = new User();  // 未发生逃逸
+        u.id = 5;
+        u.name = "andyron";
+    }
+
+    public static void main(String[] args) {
+        long start = System.currentTimeMillis();
+        for (int i = 0; i < 100000000; i++) {
+            alloc();
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("花费的时间为： " + (end - start) + " ms");
+    }
+}
+```
+
+上述代码在主西数中进行了 1亿次alloc。调用进行对象创建，由于User对象实例需要占据约16字节的空间，因此累计分配空间达到将近1.5GB。如果堆空间小于这个值，就必然会发生 GC。使用如下参数运行上述代码：
+
+`-server -Xms100m -Xmx100m -XX:+DoEscapeAnalysis -XX:+PrintGC -XX:+EliminateAllocations`
+
+这里使用參数如下：
+
+- ﻿参数-server：启动server模式，因为在server模式下，才可以启用逃逸分析(默认就是Server模式，可省略)。
+- ﻿參数-xx：+E1iminateAllocations：开启了标量替换(默认打开)，允许将对象打散分配在栈上， 比如对象拥有id和name两个字段，那么这两个字段将会被视为两个独立的局部变量进行分配。
+
+#### 逃逸分析小结：逃逸分析井不成熟
+
+- ﻿关于逃逸分析的论文在1999年就己经发表了，但直到JDK 1.6才有实现，而且这项技术到如今也并不是十分成熟的。
+- ﻿其根本原因就是**无法保证逃逸分析的性能消耗一定能高于他的消耗。虽然经过逃逸分析可以做标量替换、栈上分配、和锁消除。但是逃逸分析自身也是需要进行一系列复杂的分析的，这其实也是一个相对耗时的过程。**
+- 一个极端的例子，就是经过逃逸分析之后，发现没有一个对象是不逃逸的。那这个逃逸分析的过程就白白浪费掉了。
+- ﻿虽然这项技术并不十分成熟，但是它也是==即时编译器优化技术中一个十分重要的手段==。
+- ﻿注意到有一些观点，认为通过逃逸分析，JVM会在栈上分配那些不会逃逸的对象，这在理论上是可行的，但是取决于JVM设计者的选择。据我所知，Oracle Hotspot JVM中并未这么做，这一点在逃逸分析相关的文档里己经说明，所以可以明确所有的对象实例都是创建在堆上。
+
+- 目前很多书籍还是基于JDK 7以前的版本，JDK已经发生了很大变化，intern字符串的缓存和静态变量曾经都被分配在永久代上，而永久代已经被元数据区取代。但是，intern字符串缓存和静态变量并不是被转移到元数据区，而是直接在堆上分配，所以这一点同样符合前面一点的结论：<u>对象实例都是分配在堆上</u>。
+
+### 本章小结
+
+- ﻿年轻代是对象的诞生、成长、消亡的区域，一个对象在这里产生、应用，最后被垃圾回收器收集、结束生命。
+- ﻿老年代放置长生命周期的对象，通常都是从Survivor区域筛选拷贝过来的Java对象。当然，也有特殊情況，我们知道普通的对象会被分配在TLAB上；如果对象较大，JVM会试图直接分配在Eden其他位置上；如果对象太大，完全无法在新生代我到足够长的连续空闲空间，JVN就会直接分配到老年代。
+- ﻿当GC只发生在年轻代中，回收年轻代对象的行为被称为MinorGC。当GC发生在老年代时则被称为MajorGC 或者Full GC。一般的，Minor GC 的发生频率要比MajorGC高很多，即老年代中垃圾回收发生的频率将大大低于年轻代。
 
 ## 9 方法区❤️
 
@@ -2478,7 +2724,7 @@ staticObj随着Test的类型信息存放在方法区，instanceObj随着Test的�
 
 蚂蚁金服：
 
-Javag的内存分代改进
+Java8的内存分代改进
 
 JVM 内存分哪几个区，每个区的作用是什么？
 
@@ -2609,7 +2855,7 @@ https://github.com/easymock/objenesis
 
 > 给对象的属性赋值的操作：
 >
-> 1️⃣ 属性的默认初始化（零值初始阿虎）； 2️⃣显示初始化/3️⃣代码块中初始化； 4️⃣构造器中初始化
+> 1️⃣ 属性的默认初始化（零值初始化）； 2️⃣显示初始化/3️⃣代码块中初始化； 4️⃣构造器中初始化
 
 ##### 5 设置对象的对象头 
 
